[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["mohamadjalali <mohamadjalali324@gmail.com>"]
readme = "README.md"
packages = [{include = "algorithms"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pyrest = "^0.5.0"
requests-mock = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
